src/styles/home.scss
// ---------------------------------------------------------------------------
// Header
// ---------------------------------------------------------------------------

.header {
  @include pale-blue-bg;
  @include bottom-padding;
  position: relative;
  padding-top: 150px;
}

.header__skyline {
  width: 100%;
  height: auto;
  z-index: 0;

  svg {
    width: 130%;
  }

  @media (min-width: $lg) {
    margin-top: -100px;

    svg {
      width: 100%;
    }
  }

  @media (max-width: $sm) {
    margin-top: 50px;
  }
}

.header__content {
  width: 100%;

  @media (min-width: $lg) {
    width: 60%;
    margin-right: 50px;
  }

  @media (min-width: $xl) {
    width: 45%;
    margin-right: 50px;
  }
}

.header__title {
  @include h1-text;
  margin-bottom: 30px;
}

.header__description {
  @include large-body-text;
  margin-bottom: 30px;
}

.header__cta {
  @include primary-cta;
}

// ---------------------------------------------------------------------------
// Theme
// ---------------------------------------------------------------------------

.theme-announcement {
  @include pale-blue-bg;
  @include top-padding;
  @include bottom-padding;
}

.theme__title {
  @include h3-text;
  @include bottom-margin;
}

.theme__content-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;

  @media (min-width: $md) {
    flex-direction: row;
  }
}

.theme__logo {
  width: 50%;
  margin-bottom: 20px;

  @media (min-width: $md) {
    width: 30%;
    margin-bottom: 0;
  }
}

.theme__sprout {
  @include h2-text;
  text-align: center;
  margin-bottom: 60px;

  @media (min-width: $md) {
    margin-bottom: 30px;
    text-align: left;
  }
}

.theme__content {
  width: 100%;

  @media (min-width: $md) {
    width: 60%;
  }
}

// ---------------------------------------------------------------------------
// About
// ---------------------------------------------------------------------------

.about {
  @include sprout-green-bg;
  @include top-padding;
  @include bottom-padding;
  position: relative;
}

.about__pattern {
  position: absolute;
  width: 110%;
  min-width: $xl;
  top: 50%;
  left: -5%;
  transform: translateY(-50%);
}

.about__title {
  @include h2-text;
  @include bottom-margin;
}

// ---------------------------------------------------------------------------
// FAQ
// ---------------------------------------------------------------------------

.faq {
  @include pale-blue-bg;
  @include top-padding;
  @include bottom-padding;
}

.faq__title {
  @include h2-text;
  @include bottom-margin;
}

.faq__cta-group {
  text-align: center;
}

.faq__cta-label {
  @include large-body-text;
  font-weight: 700;
  margin-bottom: 30px;
}

.faq__cta {
  @include primary-cta;
}

// ---------------------------------------------------------------------------
// Sponsors
// ---------------------------------------------------------------------------

.home-sponsors {
  @include yellow-green-bg;
  @include top-padding;
  @include bottom-padding;
  position: relative;
}

.home-sponsors__circuit {
  display: none;
  position: absolute;
  left: 60%;

  svg {
    width: 100%;
  }

  @media (min-width: $md) {
    display: block;
    width: 300px;
    top: -14%;
  }

  @media (min-width: $xl) {
    display: block;
    width: 400px;
    top: -3%;
  }
}

.home-sponsors__title {
  @include h2-text;
  @include bottom-margin;
}

.home-sponsors__content {
  width: 100%;
  margin-bottom: 40px;

  @media (min-width: $md) {
    width: 45%;
  }
}

.home-sponsors__cta-group {
  display: flex;
  align-items: center;
  flex-direction: column;
  align-items: flex-start;

  @media (min-width: $sm) {
    flex-direction: row;
    align-items: center;
  }
}

.home-sponsors__cta {
  @include secondary-cta;
  margin: 0 0 15px 0;

  @media (min-width: $sm) {
    margin: 0 20px 0 0;
  }
}

.home-sponsors__cta-link {
  font-weight: 700;

  &:hover {
    text-decoration: none;
  }
}

// ---------------------------------------------------------------------------
// Animations
// ---------------------------------------------------------------------------

.cloud {
  animation: moveAcross 12s linear infinite;
}

@keyframes moveAcross {
  from {
    transform: translateX(-50%);
  }
  to {
    transform: translateX(100vw);
  }
}

